--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,3 +37,16 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+    install:
+    runs-on: ubuntu-latest
+
+    steps:
+        - uses: actions/checkout@v3
+        
+        - name: Setup pnpm
+        uses: pnpm/action-setup@v3 # docs https://pnpm.io/continuous-integration#github-actions
+        with:
+            version: 9  # Optional: specify a pnpm version
+
+        # Further steps for your build/test process
