--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,19 @@ permissions:
   id-token: write
 
 jobs:
+    install:
+    runs-on: ubuntu-latest
+
+    steps:
+        - uses: actions/checkout@v3
+        
+        - name: Setup pnpm
+        uses: pnpm/action-setup@v3 # docs https://pnpm.io/continuous-integration#github-actions
+        with:
+            version: 9  # Optional: specify a pnpm version
+
+        # Further steps for your build/test process
+
   build:
     runs-on: ubuntu-latest
     steps:
