--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         - name: Setup pnpm
         uses: pnpm/action-setup@v3 # docs https://pnpm.io/continuous-integration#github-actions
         with:
-            version: 9  # Optional: specify a pnpm version
+            # version: 9  # Optional: specify a pnpm version
         # Further steps for your build/test process
 
   build:
