--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,45 +1,39 @@
 name: Deploy to GitHub Pages
 
 on:
-  push: 
-  branches: [ main]
+  # Trigger the workflow every time you push to the `main` branch
+  # Using a different branch name? Replace `main` with your branch’s name
+  push:
+    branches: [ main ]
+  # Allows you to run this workflow manually from the Actions tab on GitHub.
+  workflow_dispatch:
 
- permissions:
-   contents: read
-   pages: write
-   id-token: write
+# Allow this job to clone the repo and create a page deployment
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
- jobs:
-   build:
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout your repository using git
+        uses: actions/checkout@v4
+      - name: Install, build, and upload your site
+        uses: withastro/action@v3
+        # with:
+          # path: . # The root location of your Astro project inside the repository. (optional)
+          # node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 20. (optional)
+          package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
-    name: github-pages
-  url: ${{steps.deployment.outputs.page_url}}
-runs-on: ubuntu-latest
-
-strategy:
-  matrix:
-    node-version: [18]
-steps:
-  - uses: actions/checkout@v3
-  - uses: pnpm/action-setup@v2
-    with:
-      version: 9
-  - name: Use Node.js ${{ matrix.node-version }}
-    uses: actions/setup-node@v3
-    with:
-      node-version: ${{ matrix.node-version }}
-      cache: pnpm
-  - name: Install dependencies
-    run: pnpm install
-  - name: Build
-    run: pnpm run build
-  - name: Setup Pages
-    uses: actions/configure-pages@v3
-  - name: Upload artifact
-    uses: actions/upload-pages-artifact@v1
-    with:
-      # Upload dist repository
-       path: ./dist
-  - name: Deploy to GitHub Pages
-    id: deployment
-    uses: actions/deploy-pages@v1
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
