--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,9 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main]
-  workflow_dispatch:
+    branches:
+      - main  # Trigger the workflow on push to the main branch
+  workflow_dispatch:  # Allow manual trigger of the workflow
 
 permissions:
   contents: read
@@ -18,10 +19,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install  # Or `npm install` depending on what you're using
 
       - name: Build the site
-        run: pnpm run build
+        run: pnpm run build  # Runs `astro build`
 
   deploy:
     needs: build
@@ -34,4 +35,4 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
         with:
-          folder: dist
+          folder: dist  # This tells the deploy action to deploy from the dist folder (Astro's default output folder)
